--- a/Gab/Gab.WebAppNet5/Views/Posts/Create.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Posts/Create.cshtml
@@ -24,6 +24,12 @@
                 <span asp-validation-for="Slug" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <select asp-for="Category.Id" asp-items="@ViewBag.Categories" class="form-control">
+                    <option selected disabled>Select a category</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
