--- a/Gab/Gab.WebAppNet5/Views/Posts/Details.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Posts/Details.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Slug)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Category.Name)
+        </dd>
     </dl>
 </div>
 <div>
