--- a/Gab/Gab.WebAppNet5/Views/Products/Edit.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Gab.WebAppNet5.Entities.Post
+﻿@model Gab.WebAppNet5.Entities.Product
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,7 +7,7 @@
 
 <h1>Edit</h1>
 
-<h4>Post</h4>
+<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,19 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <select asp-for="Category.Id" asp-items="@ViewBag.Categories" class="form-control">
-                    <option disabled>Select a category</option>
+                <label asp-for="Vendor" class="control-label"></label>
+                <select asp-for="Vendor.Id" asp-items="@ViewBag.Vendors" class="form-control">
+                    <option disabled>Select a vendor</option>
                 </select>
             </div>
             <div class="form-group">
