--- a/Gab/Gab.WebAppNet5/Views/Products/Index.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Gab.WebAppNet5.Entities.Post>
+﻿@model IEnumerable<Gab.WebAppNet5.Entities.Product>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,13 +14,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Slug)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
+                @Html.DisplayNameFor(model => model.Vendor)
             </th>
             <th></th>
         </tr>
@@ -29,13 +26,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Slug)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
+                @Html.DisplayFor(modelItem => item.Vendor.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
