--- a/Gab/Gab.WebAppNet5/Views/Shared/_Layout.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalogs" asp-action="Index">Catalog</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="School" asp-action="Index">School</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
