--- a/Gab/Gab.WebAppNet5/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Gab/Gab.WebAppNet5/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using Gab.WebAppNet5.Models
+@inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
