--- a/Gab/Gab.WebAppNet5/Views/Groups/Index.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Groups/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Teacher.Id)
+                @Html.DisplayFor(modelItem => item.Teacher.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
