--- a/Gab/Gab.WebAppNet5/Views/Students/Index.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Students/Index.cshtml
@@ -19,6 +19,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Group)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Group.Teacher)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,7 +32,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Group.Id)
+                @Html.DisplayFor(modelItem => item.Group.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Group.Teacher.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
