--- a/Gab/Gab.WebAppNet5/Views/Ajax/Index.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Ajax/Index.cshtml
@@ -5,24 +5,45 @@
 @section Styles
 {
     <style type="text/css">
-        pre { outline: 1px solid silver; padding: 5px; margin: 5px; }
-        .key { color: darkviolet; }
-        .string { color: green; }
-        .number { color: steelblue; }
-        .boolean { color: blueviolet; }
-        .null { color: gray; }
-        .guid { color: peru; }
-    </style>
-}
+        pre {
+            outline: 1px solid silver;
+            padding: 5px;
+            margin: 5px;
+        }
 
-@section Scripts
-{
-    <script src="js/ajax.js"></script>
+        .key {
+            color: darkviolet;
+        }
+
+        .string {
+            color: green;
+        }
+
+        .number {
+            color: steelblue;
+        }
+
+        .boolean {
+            color: blueviolet;
+        }
+
+        .null {
+            color: gray;
+        }
+
+        .guid {
+            color: peru;
+        }
+    </style>
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome Ajax</h1>
 </div>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createTeacherModal">
+    New Teacher
+</button>
 
 <table class="table">
     <thead>
@@ -40,3 +61,29 @@
 <pre id="json">
     Empty
 </pre>
+
+<div class="modal fade" id="createTeacherModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" id="createTeacherBtnClose" class="close" data-dismiss="modal" aria-label="Close">x</button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="control-label">Name</label>
+                    <input class="form-control" type="text" id="Name"/>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" id="createTeacherBtn" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts
+{
+    <script src="/js/ajax.js"></script>
+}
