lesson_5 : add groups ajax

--- a/Gab/Gab.WebAppNet5/Views/Shared/_Layout.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Shared/_Layout.cshtml
@@ -66,6 +66,17 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <div class="dropdown">
+                                <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Ajax
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Ajax" asp-action="Groups">Groups</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Ajax" asp-action="Teachers">Teachers</a>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
