--- a/Gab/Gab.WebAppNet5/Views/Ajax/Index.cshtml
+++ b/Gab/Gab.WebAppNet5/Views/Ajax/Index.cshtml
@@ -1,48 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Ajax Page";
+    ViewData["Title"] = $"{ViewBag.Entity}s Ajax Page";
 }
 
 @section Styles
 {
-    <style type="text/css">
-        pre {
-            outline: 1px solid silver;
-            padding: 5px;
-            margin: 5px;
-        }
-
-        .key {
-            color: darkviolet;
-        }
-
-        .string {
-            color: green;
-        }
-
-        .number {
-            color: steelblue;
-        }
-
-        .boolean {
-            color: blueviolet;
-        }
-
-        .null {
-            color: gray;
-        }
-
-        .guid {
-            color: peru;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/ajax.css" />
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Ajax</h1>
+    <h1 class="display-4">@ViewBag.Entity Ajax</h1>
 </div>
 
-<button type="button" id="TeacherCreateBtn" class="btn btn-primary" data-toggle="modal" data-target="#TeacherModal">
-    New Teacher
+<button type="button" id="NewEntityBtn" class="btn btn-primary" data-toggle="modal" data-target="#Modal">
+    Create new
 </button>
 
 <table class="table">
@@ -62,21 +32,28 @@
     Empty
 </pre>
 
-<div class="modal fade" id="TeacherModal" tabindex="-1" role="dialog">
+<div class="modal fade" id="Modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Modal title</h5>
-                <button type="button" id="TeacherModalClose" class="close" data-dismiss="modal" aria-label="Close">x</button>
+                <button type="button" id="ModalCloseBtn" class="close" data-dismiss="modal" aria-label="Close">x</button>
             </div>
             <div class="modal-body">
                 <div class="form-group">
                     <label class="control-label">Name</label>
                     <input class="form-control" type="text" id="Name"/>
                 </div>
+                @if (ViewBag.Entity == "Groups")
+                {
+                    <div class="form-group">
+                        <label class="control-label">Teacher</label>
+                        <select class="form-control" required id="TeacherIdList" type="text" name="TeacherId"></select>
+                    </div>
+                }
             </div>
             <div class="modal-footer">
-                <button type="button" id="TeacherSaveBtn" class="btn btn-primary">Save changes</button>
+                <button type="button" id="ModalSaveBtn" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
@@ -85,4 +62,5 @@
 @section Scripts
 {
     <script src="/js/ajax.js"></script>
+    <script src="/js/ajax@(ViewBag.Entity).js"></script>
 }
